modifications of css, changing to new color pallete

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 									</button>
                 <!-- Brand -->
                 <a class="navbar-brand page-scroll sticky-logo" href="index.html">
-                  <h1><span>Nice</span>WorkTI</h1>
+                  <h1>NiceWork<span>IT</span></h1>
                   <!-- Uncomment below if you prefer to use an image logo -->
                   <!-- <img src="img/logo.png" alt="" title=""> -->
 								</a>
@@ -84,9 +84,6 @@
                   </li>
                   <li>
                     <a class="page-scroll" href="#team">Equipe</a>
-                  </li>
-                  <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
                   </li>
                   <li>
                     <a class="page-scroll" href="#contact">Contato</a>
@@ -108,9 +105,9 @@
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
       <div id="ensign-nivoslider" class="slides">
-        <img src="img/slider/slider1.jpg" alt="" title="#slider-direction-1" />
-        <img src="img/slider/slider2.jpg" alt="" title="#slider-direction-2" />
-        <img src="img/slider/slider3.jpg" alt="" title="#slider-direction-3" />
+        <img src="img/slider/slider1.jpg" alt="4 pessoas sentadas em uma sala, Um desenvolvedor programando no seu notebook, e as outras 3 analisando seu código através de um televisor na parede.," title="#slider-direction-1" />
+        <img src="img/slider/slider2.jpg" alt="Um desenvolvedor, programando um site no seu computador com duas telas, uma com o código e a outra com o layout" title="#slider-direction-2" />
+        <img src="img/slider/slider3.jpg" alt="Duas pessoas apontando para a tela de um notebook,a imagem mostra apenas a mão delas" title="#slider-direction-3" />
       </div>
 
       <!-- direction 1 -->
@@ -386,7 +383,7 @@
             <div class="col-xs-12 col-sm-3 col-md-3 text-center">
               <div class="single-skill">
                 <div class="progress-circular">
-                  <input type="text" class="knob" value="0" data-rel="95" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                  <input type="text" class="knob" value="0" data-rel="95" data-linecap="round" data-width="175" data-bgcolor="#333" data-fgcolor="#8874a3" data-thickness=".20" data-readonly="true" disabled>
                   <h3 class="progress-h4">Web Design</h3>
                 </div>
               </div>
@@ -396,7 +393,7 @@
             <div class="col-xs-12 col-sm-3 col-md-3 text-center">
               <div class="single-skill">
                 <div class="progress-circular">
-                  <input type="text" class="knob" value="0" data-rel="90" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                  <input type="text" class="knob" value="0" data-rel="90" data-linecap="round" data-width="175" data-bgcolor="#333" data-fgcolor="#8874a3" data-thickness=".20" data-readonly="true" disabled>
                   <h3 class="progress-h4">Design Gráfico</h3>
                 </div>
               </div>
@@ -406,7 +403,7 @@
             <div class="col-xs-12 col-sm-3 col-md-3 text-center">
               <div class="single-skill">
                 <div class="progress-circular">
-                  <input type="text" class="knob" value="0" data-rel="100" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                  <input type="text" class="knob" value="0" data-rel="100" data-linecap="round" data-width="175" data-bgcolor="#333" data-fgcolor="#8874a3" data-thickness=".20" data-readonly="true" disabled>
                   <h3 class="progress-h4">Node Developer</h3>
                 </div>
               </div>
@@ -416,7 +413,7 @@
             <div class="col-xs-12 col-sm-3 col-md-3 text-center">
               <div class="single-skill">
                 <div class="progress-circular">
-                  <input type="text" class="knob" value="0" data-rel="100" data-linecap="round" data-width="175" data-bgcolor="#fff" data-fgcolor="#3EC1D5" data-thickness=".20" data-readonly="true" disabled>
+                  <input type="text" class="knob" value="0" data-rel="100" data-linecap="round" data-width="175" data-bgcolor="#333" data-fgcolor="#8874a3" data-thickness=".20" data-readonly="true" disabled>
                   <h3 class="progress-h4">Java Script Frameworks</h3>
                 </div>
               </div>
